[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Characters/Ship Parts/Frames/CropFrame.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Characters/Ship Parts/Wings/CropWings.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Ship Scripts/ShipVisualManager.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Characters/Ship Parts/Wings/StarWings.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Characters/Ship Parts/Wings/JetWings.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Characters/Ship Parts/Wings/SupersonicWings.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Characters/Ship Parts/Frames/JetFrame.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Characters/Ship Parts/Frames/SupersonicFrame.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Characters/Ship Parts/Frames/StarFrame.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Weapons/AutoRifleXV.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/PlayerWeaponManager.gd" type="Script" id=11]
[ext_resource path="res://Scenes/Weapons/RocketLauncherMk1.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Weapons/CropCannon.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Weapons/CerberusCannon.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Characters/Ship Parts/Frames/DroneFrame.tscn" type="PackedScene" id=15]

[node name="ShipManager" type="Node2D"]
script = ExtResource( 3 )

[node name="Wings" type="Node2D" parent="."]

[node name="Crop Wings" parent="Wings" instance=ExtResource( 2 )]
visible = false
position = Vector2( -0.47, 0 )
has_particles = true

[node name="Jet Wings" parent="Wings" instance=ExtResource( 5 )]
visible = false
position = Vector2( -1, -1 )
has_particles = true

[node name="Supersonic Wings" parent="Wings" instance=ExtResource( 6 )]
visible = false
position = Vector2( 0, 1.41 )
has_particles = true

[node name="Star Wings" parent="Wings" instance=ExtResource( 4 )]
visible = false
position = Vector2( -0.49, 0 )
has_particles = true

[node name="Frame" type="Node2D" parent="."]

[node name="Crop Frame" parent="Frame" instance=ExtResource( 1 )]
visible = false

[node name="Jet Frame" parent="Frame" instance=ExtResource( 7 )]
visible = false
position = Vector2( -0.528, 0 )

[node name="Supersonic Frame" parent="Frame" instance=ExtResource( 8 )]
visible = false
position = Vector2( -0.487, -1.617 )

[node name="Star Frame" parent="Frame" instance=ExtResource( 9 )]
visible = false
position = Vector2( -0.528, 0 )

[node name="Drone Frame" parent="Frame" instance=ExtResource( 15 )]
visible = false

[node name="WeaponLeft" type="Node2D" parent="."]
position = Vector2( -8.435, -3 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 11 )

[node name="Crop Cannon" parent="WeaponLeft" instance=ExtResource( 13 )]
visible = false

[node name="Auto Rifle XV" parent="WeaponLeft" instance=ExtResource( 10 )]
visible = false

[node name="Rocket Launcher Mk1" parent="WeaponLeft" instance=ExtResource( 12 )]
visible = false

[node name="Cerberus Cannon" parent="WeaponLeft" instance=ExtResource( 14 )]
visible = false

[node name="WeaponRight" type="Node2D" parent="."]
position = Vector2( 7.545, -3 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 11 )

[node name="Crop Cannon" parent="WeaponRight" instance=ExtResource( 13 )]
visible = false

[node name="Auto Rifle XV" parent="WeaponRight" instance=ExtResource( 10 )]
visible = false

[node name="Rocket Launcher Mk1" parent="WeaponRight" instance=ExtResource( 12 )]
visible = false

[node name="Cerberus Cannon" parent="WeaponRight" instance=ExtResource( 14 )]
visible = false
