[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Ship Scripts/ShipVisualManager.gd" type="Script" id=1]
[ext_resource path="res://Audio/SFX/TitleTakeOff.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/SFX/TitleShipStart.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/SFX/UI/Navigation Blip 2.wav" type="AudioStream" id=4]
[ext_resource path="res://Scenes/Characters/ShipManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Audio/SFX/UI/Easter Egg.wav" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Menus/ButtonPrompt.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/ButtonPrompt.gd" type="Script" id=8]
[ext_resource path="res://Graphics/Fonts/Font 5.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Graphics/Fonts/Main Font.ttf" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=1]
size = 159
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=3]
size = 130
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=2]
resource_name = "Blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.976471, 0.709804, 0.364706, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 130, 145 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 145 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/path = NodePath("FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.105882, 0.105882, 0.105882, 1 ), Color( 0.105882, 0.105882, 0.105882, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Start Game"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ShipManager:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.1, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 976, 564 ), Vector2( 976, 650 ), Vector2( 976, 650 ), Vector2( 976, -200 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OldTitle/Title Info:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ShipManager/BuildUp:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ShipManager/TakeOff:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="DynamicFont" id=14]
size = 130
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=15]
resource_name = "Disable"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("OptionLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.227451, 0.227451, 0.227451, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("OptionLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.227451, 0.227451, 0.227451, 1 ) ]
}

[node name="OldTitle" type="Node2D"]
visible = false

[node name="Title Info" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="Title Info"]
margin_left = 447.0
margin_top = 42.0
margin_right = 1527.0
margin_bottom = 205.0
custom_fonts/font = SubResource( 1 )
text = "To the MOON!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="Title Info"]
margin_left = 437.0
margin_top = 207.0
margin_right = 2539.0
margin_bottom = 370.0
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.964706, 0.690196, 0.443137, 1 )
custom_fonts/font = SubResource( 1 )
text = "A4: Enemies at Your 12!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Control" parent="Title Info" instance=ExtResource( 7 )]
modulate = Color( 0.188235, 0.188235, 0.188235, 1 )
margin_left = 947.0
margin_top = 1006.0
margin_right = 987.0
margin_bottom = 1046.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 19.3333, 20.6667 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
_input = "Discord"
pressed_sound = ExtResource( 4 )
pressed_volume = -5.0
label_position = Vector2( 32.355, 2.858 )

[node name="QuitButton" type="Control" parent="Title Info" instance=ExtResource( 7 )]
modulate = Color( 0.188235, 0.188235, 0.188235, 1 )
margin_left = 112.297
margin_top = 1010.49
margin_right = 152.297
margin_bottom = 1050.49
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 19.3333, 20.6667 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
_input = "Discord"
pressed_sound = ExtResource( 4 )
pressed_volume = -5.0
label_position = Vector2( 32.355, 2.858 )

[node name="StartLabel" type="Label" parent="Title Info"]
margin_left = 9.0
margin_top = 855.0
margin_right = 2725.0
margin_bottom = 1023.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color = Color( 0.964706, 0.690196, 0.443137, 1 )
custom_fonts/font = SubResource( 3 )
text = "Insert Coin"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartAnim" type="AnimationPlayer" parent="Title Info/StartLabel"]
autoplay = "Blink"
reset_on_save = false
anims/Blink = SubResource( 2 )
anims/RESET = SubResource( 4 )

[node name="ShipManager" type="Node2D" parent="." instance=ExtResource( 5 )]
position = Vector2( 976, 564 )
scale = Vector2( 15, 15 )
script = ExtResource( 1 )
update_weapon_anchors = true

[node name="TakeOff" type="AudioStreamPlayer" parent="ShipManager"]
stream = ExtResource( 2 )
pitch_scale = 0.61

[node name="BuildUp" type="AudioStreamPlayer" parent="ShipManager"]
stream = ExtResource( 3 )
volume_db = -4.0
pitch_scale = 0.57

[node name="FadeRect" type="ColorRect" parent="."]
margin_left = -349.0
margin_top = -225.0
margin_right = 2346.0
margin_bottom = 1273.0
color = Color( 0.105882, 0.105882, 0.105882, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
autoplay = "Fade"
anims/Fade = SubResource( 5 )

[node name="TitleSubAnim" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
reset_on_save = false
"anims/Start Game" = SubResource( 17 )

[node name="ShipRandomizer" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionLabel" type="Label" parent="ShipRandomizer"]
modulate = Color( 0.227451, 0.227451, 0.227451, 1 )
margin_right = 476.0
margin_bottom = 163.0
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 14 )
text = "Option"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressedAudio" type="AudioStreamPlayer" parent="ShipRandomizer"]
stream = ExtResource( 6 )
volume_db = -15.0
bus = "SFX"

[node name="Anim" type="AnimationPlayer" parent="ShipRandomizer"]
anims/Disable = SubResource( 15 )
anims/RESET = SubResource( 16 )

[connection signal="Button_Pressed" from="Title Info/StartButton" to="Title Info/StartButton/PromptManager" method="button_pressed"]
[connection signal="Button_Pressed" from="Title Info/StartButton" to="Title Info/StartButton/PressedAudio" method="play"]
[connection signal="Button_Pressed" from="Title Info/QuitButton" to="Title Info/QuitButton/PromptManager" method="button_pressed"]
[connection signal="Button_Pressed" from="Title Info/QuitButton" to="Title Info/QuitButton/PressedAudio" method="play"]
[connection signal="Button_Pressed" from="ShipRandomizer" to="ShipManager" method="ship_randomizer"]
[connection signal="Button_Pressed" from="ShipRandomizer" to="ShipRandomizer/PressedAudio" method="play"]
